# vertx-eventbus-client-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: CI.yml  clippy-check.yml  coverage.yml  tests.yml
src/: error.rs  lib.rs  listener.rs  message.rs  publisher.rs  utils.rs
src/async/: listener.rs  message.rs  mod.rs  publisher.rs
src/sync/: listener.rs  message.rs  mod.rs  publisher.rs
