[package]
name = "vertx-eventbus-bridge"
version = "0.1.0"
authors = ["aesteve <arnaud.esteve@decathlon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"
byteorder = "1.3.4"
buffered-reader = "0.17.0"