[package]
name = "vertx-eventbus-bridge"
description = "Rust client enabling communication with Vert.x Event Bus over TCP"
keywords = ["vertx", "eventbus", "tcp", "bridge"]
categories = ["api-bindings", "network-programming"]
version = "0.0.4"
repository = "https://github.com/aesteve/vertx-eventbus-client-rs"
homepage = "https://github.com/aesteve/vertx-eventbus-client-rs"
documentation = "https://github.com/aesteve/vertx-eventbus-client-rs"
authors = ["aesteve <arnaud.esteve@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
exclude = ["testutils/"]

[dependencies]
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"
byteorder = "1.3.4"
buffered-reader = "1.0.0"

[dev-dependencies]
testcontainers = "0.11.0"